--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -21,3 +21,9 @@
 
 en:
   hello: "Hello world"
+  hello_world: Hello world!
+  hello_flash: Hello flash!
+
+vn:
+  hello_world: Xin chao!
+  hello_flash: Xin chao flash!
