Support sign up

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2,5 +2,10 @@ en:
   hello: "Hello world"
   hello_world: Hello world!
   hello_flash: Hello flash!
+  wellcome: Welcome to the Sample App
   signup: Sign Up!
-  wellcome: Welcome to the Sample App!
+  layouts:
+    users:
+      wellcome: Welcome to the Sample App
+      signup: Signup
+      confirmation: Confirmation
